Fix the remaining inappropriately-migrated tests
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@387197 13f79535-47bb-0310-9956-ffa450edef68